--- a/finetuning01.ipynb
+++ b/finetuning01.ipynb
@@ -10,20 +10,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 必要なモジュールをインポート\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "import openai\n",
+    "from openai import OpenAI\n",
     "\n",
-    "# 環境変数の読み込み\n",
+    "# 環境変数の取得\n",
     "load_dotenv()\n",
-    "openai.organization = os.environ['ORGANIZATION']\n",
-    "openai.api_key = os.environ['API_KEY']\n",
-    "model_name = \"davinci\""
+    "# OpenAI APIクライアントを生成\n",
+    "client = OpenAI(api_key=os.environ['API_KEY'])\n",
+    "\n",
+    "# モデル名\n",
+    "model_name = \"gpt-3.5-turbo-1106\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 学習データのチェック\n",
+    "\n",
+    "https://cookbook.openai.com/examples/chat_finetuning_data_prep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import tiktoken # for token counting\n",
+    "import numpy as np\n",
+    "from collections import defaultdict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num examples: 10\n",
+      "First example:\n",
+      "{'role': 'user', 'content': 'どさ？'}\n",
+      "{'role': 'assistant', 'content': 'どこへ？'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_path = \"training.jsonl\"\n",
+    "\n",
+    "# Load the dataset\n",
+    "with open(data_path, 'r', encoding='utf-8') as f:\n",
+    "    dataset = [json.loads(line) for line in f]\n",
+    "\n",
+    "# Initial dataset stats\n",
+    "print(\"Num examples:\", len(dataset))\n",
+    "print(\"First example:\")\n",
+    "for message in dataset[0][\"messages\"]:\n",
+    "    print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No errors found\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Format error checks\n",
+    "format_errors = defaultdict(int)\n",
+    "\n",
+    "for ex in dataset:\n",
+    "    if not isinstance(ex, dict):\n",
+    "        format_errors[\"data_type\"] += 1\n",
+    "        continue\n",
+    "        \n",
+    "    messages = ex.get(\"messages\", None)\n",
+    "    if not messages:\n",
+    "        format_errors[\"missing_messages_list\"] += 1\n",
+    "        continue\n",
+    "        \n",
+    "    for message in messages:\n",
+    "        if \"role\" not in message or \"content\" not in message:\n",
+    "            format_errors[\"message_missing_key\"] += 1\n",
+    "        \n",
+    "        if any(k not in (\"role\", \"content\", \"name\", \"function_call\") for k in message):\n",
+    "            format_errors[\"message_unrecognized_key\"] += 1\n",
+    "        \n",
+    "        if message.get(\"role\", None) not in (\"system\", \"user\", \"assistant\", \"function\"):\n",
+    "            format_errors[\"unrecognized_role\"] += 1\n",
+    "            \n",
+    "        content = message.get(\"content\", None)\n",
+    "        function_call = message.get(\"function_call\", None)\n",
+    "        \n",
+    "        if (not content and not function_call) or not isinstance(content, str):\n",
+    "            format_errors[\"missing_content\"] += 1\n",
+    "    \n",
+    "    if not any(message.get(\"role\", None) == \"assistant\" for message in messages):\n",
+    "        format_errors[\"example_missing_assistant_message\"] += 1\n",
+    "\n",
+    "if format_errors:\n",
+    "    print(\"Found errors:\")\n",
+    "    for k, v in format_errors.items():\n",
+    "        print(f\"{k}: {v}\")\n",
+    "else:\n",
+    "    print(\"No errors found\")"
    ]
   },
   {
@@ -36,33 +143,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"object\": \"file\",\n",
-      "  \"id\": \"file-hVt7xQ5hf36iS8dQjYjWxOak\",\n",
-      "  \"purpose\": \"fine-tune\",\n",
-      "  \"filename\": \"file\",\n",
-      "  \"bytes\": 175,\n",
-      "  \"created_at\": 1688280037,\n",
-      "  \"status\": \"uploaded\",\n",
-      "  \"status_details\": null\n",
-      "}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "FileObject(id='file-7WHeNOxALRxBQPrk7PKPHwPE', bytes=1132, created_at=1704612470, filename='training.jsonl', object='file', purpose='fine-tune', status='processed', status_details=None)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# 学習データのアップロード\n",
-    "train = openai.File.create(\n",
-    "    file=open(\"./training.jsonl\", \"rb\"), \n",
-    "    purpose='fine-tune')\n",
-    "\n",
-    "train"
+    "client.files.create(\n",
+    "  file=open(\"training.jsonl\", \"rb\"),\n",
+    "  purpose=\"fine-tune\"\n",
+    ")"
    ]
   },
   {
@@ -75,71 +175,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ファインチューニング実行\n",
-    "finetuning_result = openai.FineTune.create(\n",
-    "    training_file=train.id, model=model_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<FineTune fine-tune id=ft-Z5LWzHVOd676zfWx8Mx6ljKE at 0x21c41cb19d0> JSON: {\n",
-       "  \"object\": \"fine-tune\",\n",
-       "  \"id\": \"ft-Z5LWzHVOd676zfWx8Mx6ljKE\",\n",
-       "  \"hyperparams\": {\n",
-       "    \"n_epochs\": 4,\n",
-       "    \"batch_size\": null,\n",
-       "    \"prompt_loss_weight\": 0.01,\n",
-       "    \"learning_rate_multiplier\": null\n",
-       "  },\n",
-       "  \"organization_id\": \"org-HRz6nr9EOrn5L7WRrkVsik99\",\n",
-       "  \"model\": \"davinci\",\n",
-       "  \"training_files\": [\n",
-       "    {\n",
-       "      \"object\": \"file\",\n",
-       "      \"id\": \"file-hVt7xQ5hf36iS8dQjYjWxOak\",\n",
-       "      \"purpose\": \"fine-tune\",\n",
-       "      \"filename\": \"file\",\n",
-       "      \"bytes\": 175,\n",
-       "      \"created_at\": 1688280037,\n",
-       "      \"status\": \"processed\",\n",
-       "      \"status_details\": null\n",
-       "    }\n",
-       "  ],\n",
-       "  \"validation_files\": [],\n",
-       "  \"result_files\": [],\n",
-       "  \"created_at\": 1688280137,\n",
-       "  \"updated_at\": 1688280137,\n",
-       "  \"status\": \"pending\",\n",
-       "  \"fine_tuned_model\": null,\n",
-       "  \"events\": [\n",
-       "    {\n",
-       "      \"object\": \"fine-tune-event\",\n",
-       "      \"level\": \"info\",\n",
-       "      \"message\": \"Created fine-tune: ft-Z5LWzHVOd676zfWx8Mx6ljKE\",\n",
-       "      \"created_at\": 1688280137\n",
-       "    }\n",
-       "  ]\n",
-       "}"
+       "FineTuningJob(id='ftjob-RUV9KV8LRt0a4kMaanI2laLF', created_at=1704612536, error=None, fine_tuned_model=None, finished_at=None, hyperparameters=Hyperparameters(n_epochs='auto', batch_size='auto', learning_rate_multiplier='auto'), model='gpt-3.5-turbo-1106', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=[], status='validating_files', trained_tokens=None, training_file='file-7WHeNOxALRxBQPrk7PKPHwPE', validation_file=None)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 結果の表示\n",
-    "finetuning_result"
+    "# ファインチューニングジョブの開始\n",
+    "client.fine_tuning.jobs.create(\n",
+    "  training_file = \"file-7WHeNOxALRxBQPrk7PKPHwPE\", \n",
+    "  model = model_name\n",
+    ")"
    ]
   },
   {
@@ -152,42 +207,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'succeeded'"
+       "SyncCursorPage[FineTuningJob](data=[FineTuningJob(id='ftjob-RUV9KV8LRt0a4kMaanI2laLF', created_at=1704612536, error=None, fine_tuned_model=None, finished_at=None, hyperparameters=Hyperparameters(n_epochs=10, batch_size=1, learning_rate_multiplier=2), model='gpt-3.5-turbo-1106', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=[], status='running', trained_tokens=None, training_file='file-7WHeNOxALRxBQPrk7PKPHwPE', validation_file=None)], object='list', has_more=False)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 状態を確認。pending:保留中（処理待ち）、succeeded:完了\n",
-    "openai.FineTune.retrieve(id=finetuning_result.id).status"
+    "# List 10 fine-tuning jobs\n",
+    "client.fine_tuning.jobs.list(limit=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "davinci:ft-personal-2023-07-02-08-19-17\n"
-     ]
+     "data": {
+      "text/plain": [
+       "FineTuningJob(id='ftjob-RUV9KV8LRt0a4kMaanI2laLF', created_at=1704612536, error=None, fine_tuned_model=None, finished_at=None, hyperparameters=Hyperparameters(n_epochs=10, batch_size=1, learning_rate_multiplier=2), model='gpt-3.5-turbo-1106', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=[], status='running', trained_tokens=None, training_file='file-7WHeNOxALRxBQPrk7PKPHwPE', validation_file=None)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# モデル名を取得\n",
-    "finetuned_model_name = openai.FineTune.retrieve(id=finetuning_result.id).fine_tuned_model\n",
-    "print(finetuned_model_name)"
+    "# Retrieve the state of a fine-tune\n",
+    "client.fine_tuning.jobs.retrieve(\"ftjob-RUV9KV8LRt0a4kMaanI2laLF\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SyncCursorPage[FineTuningJob](data=[FineTuningJob(id='ftjob-RUV9KV8LRt0a4kMaanI2laLF', created_at=1704612536, error=None, fine_tuned_model='ft:gpt-3.5-turbo-1106:personal::8eHyTOMW', finished_at=1704612904, hyperparameters=Hyperparameters(n_epochs=10, batch_size=1, learning_rate_multiplier=2), model='gpt-3.5-turbo-1106', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=['file-5IjLsFd8idgDo0V6EzbNp8Si'], status='succeeded', trained_tokens=1970, training_file='file-7WHeNOxALRxBQPrk7PKPHwPE', validation_file=None)], object='list', has_more=False)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# List 10 fine-tuning jobs\n",
+    "client.fine_tuning.jobs.list(limit=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FineTuningJob(id='ftjob-RUV9KV8LRt0a4kMaanI2laLF', created_at=1704612536, error=None, fine_tuned_model='ft:gpt-3.5-turbo-1106:personal::8eHyTOMW', finished_at=1704612904, hyperparameters=Hyperparameters(n_epochs=10, batch_size=1, learning_rate_multiplier=2), model='gpt-3.5-turbo-1106', object='fine_tuning.job', organization_id='org-xPjRpwlrimJbMHBKNimdi7UM', result_files=['file-5IjLsFd8idgDo0V6EzbNp8Si'], status='succeeded', trained_tokens=1970, training_file='file-7WHeNOxALRxBQPrk7PKPHwPE', validation_file=None)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Retrieve the state of a fine-tune\n",
+    "client.fine_tuning.jobs.retrieve(\"ftjob-RUV9KV8LRt0a4kMaanI2laLF\")"
    ]
   },
   {
@@ -200,30 +299,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ニュースで使われてる慣用句、熟語は「いだましい」の「いだましい」の意味は？. 犬飼沙耶／『いだましい』は「饒舌な、臆病者、知恵より不思議の多い」とされる. 94pub.ne.jp. 恋愛相談. Te1.綺麗事ができる人はいだましいだから友との愛着が薄くなる 9780 8183 8416 夢を見る、友を求め、影を追われ. いだましい せいばだいか・いだましいに、「饒舌で隙のない自爆ムーブメントを繰り返す. こういった悪さを見回すと、部分的にいだましい、 で、みんなにとっていだ\n"
+      "イライラする/イラつく\n"
      ]
     }
    ],
    "source": [
     "# プロンプトの設定\n",
-    "prompt = \"「いだましい」の意味は？\"\n",
+    "content = \"「かちゃくちゃねぇ」の意味は？\"\n",
     "\n",
     "# APIへリクエスト\n",
-    "response = openai.Completion.create(\n",
-    "    model=finetuned_model_name,\n",
-    "    prompt=prompt,\n",
-    "    max_tokens=300\n",
+    "response = client.chat.completions.create(\n",
+    "  model=\"ft:gpt-3.5-turbo-1106:personal::8eHyTOMW\",\n",
+    "  messages=[\n",
+    "    {\"role\": \"user\", \"content\": content}\n",
+    "  ]\n",
     ")\n",
     "\n",
-    "# 結果を表示\n",
-    "print(response.choices[0][\"text\"].strip())"
+    "# 言語モデルからの回答を表示\n",
+    "print(response.choices[0].message.content.strip())"
    ]
   },
   {
@@ -250,7 +350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
