--- a/prompt_template01.ipynb
+++ b/prompt_template01.ipynb
@@ -12,19 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 必要なモジュールをインポート\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "import openai\n",
+    "from openai import OpenAI\n",
     "\n",
-    "# 環境変数の読み込み\n",
+    "# 環境変数の取得\n",
     "load_dotenv()\n",
-    "openai.api_key = os.environ['API_KEY']\n",
-    "model_name = \"gpt-3.5-turbo\""
+    "# OpenAI APIクライアントを生成\n",
+    "client = OpenAI(api_key=os.environ['API_KEY'])\n",
+    "\n",
+    "# モデル名\n",
+    "model_name = \"gpt-3.5-turbo-1106\""
    ]
   },
   {
@@ -37,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,20 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "はい、それは「もったいない」という意味です。\n"
+      "はい、それはもったいないです。\n"
      ]
     }
    ],
    "source": [
     "# APIへリクエスト\n",
-    "response = openai.ChatCompletion.create(\n",
+    "response = client.chat.completions.create(\n",
     "    model=model_name,\n",
     "    messages=[\n",
     "        {\"role\": \"user\", \"content\": prompt},\n",
@@ -86,7 +89,7 @@
     ")\n",
     "\n",
     "# 言語モデルからの回答を表示\n",
-    "print(response.choices[0][\"message\"][\"content\"].strip())"
+    "print(response.choices[0].message.content.strip())"
    ]
   },
   {
@@ -113,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
