--- a/function01.ipynb
+++ b/function01.ipynb
@@ -19,12 +19,15 @@
     "# 必要なモジュールをインポート\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "import openai\n",
+    "from openai import OpenAI\n",
     "\n",
-    "# 環境変数の読み込み\n",
+    "# 環境変数の取得\n",
     "load_dotenv()\n",
-    "openai.api_key = os.environ['API_KEY']\n",
-    "model_name = \"gpt-3.5-turbo\""
+    "# OpenAI APIクライアントを生成\n",
+    "client = OpenAI(api_key=os.environ['API_KEY'])\n",
+    "\n",
+    "# モデル名\n",
+    "model_name = \"gpt-3.5-turbo-1106\""
    ]
   },
   {
@@ -62,87 +65,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 関数情報の作成\n",
-    "functions=[\n",
-    "    {\n",
-    "        \"name\": \"get_search_result\",\n",
-    "        \"description\": \"指定したキーワードの検索結果を取得する\",\n",
-    "        \"parameters\": {\n",
-    "            \"type\": \"object\",\n",
-    "            \"properties\": {\n",
-    "                \"keyword\": {\n",
-    "                    \"type\": \"string\",\n",
-    "                    \"description\": \"キーワード\",\n",
+    "from openai.types.chat import ChatCompletionToolParam\n",
+    "\n",
+    "# ツール定義\n",
+    "tools=[\n",
+    "    ChatCompletionToolParam({\n",
+    "        \"type\": \"function\",\n",
+    "        \"function\": {\n",
+    "            \"name\": \"get_search_result\",\n",
+    "            \"description\": \"指定したキーワードの検索結果を取得する\",\n",
+    "            \"parameters\": {\n",
+    "                \"type\": \"object\",\n",
+    "                \"properties\": {\n",
+    "                    \"keyword\": {\n",
+    "                        \"type\": \"string\",\n",
+    "                        \"description\": \"キーワード\",\n",
+    "                    },\n",
+    "                    \"when\": {\n",
+    "                        \"type\": \"number\",\n",
+    "                        \"description\": \"日付や時間の範囲\"\n",
+    "                    },\n",
+    "                    \"unit\": {\n",
+    "                        \"type\": \"string\",\n",
+    "                        \"enum\": [\"d\", \"h\", \"y\"]\n",
+    "                    },\n",
     "                },\n",
-    "                \"when\": {\n",
-    "                    \"type\": \"number\",\n",
-    "                    \"description\": \"日付や時間の範囲\"\n",
-    "                },\n",
-    "                \"unit\": {\n",
-    "                    \"type\": \"string\",\n",
-    "                    \"enum\": [\"d\", \"h\", \"y\"]\n",
-    "                },\n",
+    "                \"required\": [\"keyword\"],\n",
     "            },\n",
-    "            \"required\": [\"keyword\"],\n",
     "        },\n",
-    "    }\n",
+    "    })\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "question = \"東京駅のイベントについて、最近1ヶ月以内の検索結果を教えてください\"\n",
     "\n",
-    "response = openai.ChatCompletion.create(\n",
+    "response = client.chat.completions.create(\n",
     "    model=model_name,\n",
     "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"あなたはJSON形式で出力するようデザインされたアシスタントです。\"},\n",
     "        {\"role\": \"user\", \"content\": question},\n",
     "    ],\n",
-    "    functions=functions,\n",
-    "    function_call=\"auto\",\n",
+    "    tools=tools,\n",
+    "    tool_choice=\"auto\",\n",
+    "    response_format={\"type\":\"json_object\"}\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject chat.completion id=chatcmpl-7XgYHkrvWlECC4bpVhFbrtioPLZn0 at 0x1c8f3722750> JSON: {\n",
-       "  \"id\": \"chatcmpl-7XgYHkrvWlECC4bpVhFbrtioPLZn0\",\n",
-       "  \"object\": \"chat.completion\",\n",
-       "  \"created\": 1688262749,\n",
-       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"index\": 0,\n",
-       "      \"message\": {\n",
-       "        \"role\": \"assistant\",\n",
-       "        \"content\": null,\n",
-       "        \"function_call\": {\n",
-       "          \"name\": \"get_search_result\",\n",
-       "          \"arguments\": \"{\\n  \\\"keyword\\\": \\\"\\u6771\\u4eac\\u99c5\\u306e\\u30a4\\u30d9\\u30f3\\u30c8\\\",\\n  \\\"when\\\": 1,\\n  \\\"unit\\\": \\\"m\\\"\\n}\"\n",
-       "        }\n",
-       "      },\n",
-       "      \"finish_reason\": \"function_call\"\n",
-       "    }\n",
-       "  ],\n",
-       "  \"usage\": {\n",
-       "    \"prompt_tokens\": 135,\n",
-       "    \"completion_tokens\": 40,\n",
-       "    \"total_tokens\": 175\n",
-       "  }\n",
-       "}"
+       "ChatCompletion(id='chatcmpl-8eFSMwj1z1vRWYngA9mHaZCrUYTE1', choices=[Choice(finish_reason='tool_calls', index=0, logprobs=None, message=ChatCompletionMessage(content=None, role='assistant', function_call=None, tool_calls=[ChatCompletionMessageToolCall(id='call_FRP9itYx2vg5IuRqahUZRGkK', function=Function(arguments='{\"keyword\":\"東京駅のイベント\",\"when\":1,\"unit\":\"m\"}', name='get_search_result'), type='function')]))], created=1704603226, model='gpt-3.5-turbo-1106', object='chat.completion', system_fingerprint='fp_cbe4fa03fe', usage=CompletionUsage(completion_tokens=33, prompt_tokens=161, total_tokens=194))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,27 +139,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\\n  \"keyword\": \"東京駅のイベント\",\\n  \"when\": 1,\\n  \"unit\": \"m\"\\n}'"
+       "'{\"keyword\":\"東京駅のイベント\",\"when\":1,\"unit\":\"m\"}'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "response[\"choices\"][0][\"message\"][\"function_call\"][\"arguments\"]"
+    "response.choices[0].message.tool_calls[0].function.arguments"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -183,29 +169,25 @@
       "関数名：get_search_result\n",
       "引数：{'keyword': '東京駅のイベント', 'when': 1, 'unit': 'm'}\n",
       "関数の実行結果：{\"result\": [{\"title\": \"1914\\u5e74\\uff08\\u5927\\u6b633\\u5e74\\uff09\\u4e2d\\u592e\\u505c\\u8eca\\u5834\\u6539\\u3081\\u300c\\u6771\\u4eac\\u99c5\\u300d\\u3068\\u3057\\u3066\\u55b6\\u696d\\u3092\\u958b\\u59cb\\u3057\\u307e\\u3057\\u305f\"}, {\"title\": \"1929\\u5e74\\uff08\\u662d\\u548c4\\u5e74\\uff09\\u516b\\u91cd\\u6d32\\u53e3\\u304c\\u958b\\u8a2d\\u3055\\u308c\\u307e\\u3057\\u305f\"}, {\"title\": \"2014\\u5e74\\uff08\\u5e73\\u621026\\u5e74\\uff09\\u6771\\u4eac\\u99c5\\u958b\\u696d100\\u5468\\u5e74\\u3092\\u8fce\\u3048\\u307e\\u3057\\u305f\"}]}\n",
-      "最近の1ヶ月以内の検索結果によると、東京駅のイベントに関して以下の内容があります。\n",
+      "最近1ヶ月以内の東京駅のイベントについての検索結果は以下のとおりです：\n",
       "\n",
       "1. 1914年（大正3年）中央停車場改め「東京駅」として営業を開始しました。\n",
-      "\n",
       "2. 1929年（昭和4年）八重洲口が開設されました。\n",
-      "\n",
-      "3. 2014年（平成26年）東京駅開業100周年を祝うイベントが行われました。\n",
-      "\n",
-      "詳細な内容や開催情報はわかりませんので、詳細を知りたい場合はイベントの公式ウェブサイトや関連情報をご確認ください。\n"
+      "3. 2014年（平成26年）東京駅開業100周年を迎えました。\n"
      ]
     }
    ],
    "source": [
-    "# 言語モデルからの回答メッセージを取得\n",
-    "message = response[\"choices\"][0][\"message\"]\n",
+    "# モデルがツール呼出と判断した\n",
+    "if response.choices[0].message.tool_calls is not None:\n",
+    "    # 言語モデルの回答からツールを取得\n",
+    "    tool = response.choices[0].message.tool_calls[0]\n",
     "\n",
-    "# モデルが関数呼出と判断した\n",
-    "if message.get(\"function_call\"):\n",
     "    # 関数名の取得\n",
-    "    function_name = message[\"function_call\"][\"name\"]\n",
+    "    function_name = tool.function.name\n",
     "    print(f\"関数名：{function_name}\")\n",
     "    # 引数の取得\n",
-    "    arguments = json.loads(message[\"function_call\"][\"arguments\"])\n",
+    "    arguments = json.loads(tool.function.arguments)\n",
     "    print(f\"引数：{arguments}\")\n",
     "\n",
     "    # 関数名で実行する関数を判断\n",
@@ -218,26 +200,33 @@
     "    print(f\"関数の実行結果：{function_response}\")\n",
     "\n",
     "    # 関数の実行結果をmessagesに加えて言語モデルを呼出\n",
-    "    response2 = openai.ChatCompletion.create(\n",
+    "    response2 = client.chat.completions.create(\n",
     "        model=model_name,\n",
     "        messages=[\n",
     "            {\"role\": \"user\", \"content\": question},\n",
-    "            message,\n",
+    "            response.choices[0].message,\n",
     "            {\n",
-    "                \"role\": \"function\",\n",
-    "                \"name\": function_name,\n",
+    "                \"tool_call_id\": tool.id,\n",
+    "                \"role\": \"tool\",\n",
     "                \"content\": function_response,\n",
     "            },\n",
     "        ],\n",
     "    )\n",
     "\n",
     "    # 言語モデルからの回答を出力\n",
-    "    print(response2.choices[0][\"message\"][\"content\"].strip())\n",
+    "    print(response2.choices[0].message.content.strip())\n",
     "\n",
     "else:\n",
     "    # 関数呼び出しでなければ、単に言語モデルからの回答を出力\n",
-    "    print(response.choices[0][\"message\"][\"content\"].strip())"
+    "    print(response.choices[0].message.content.strip())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -256,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
