--- a/langchain01.ipynb
+++ b/langchain01.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_openai import OpenAI\n",
+    "\n",
+    "model_name = \"gpt-3.5-turbo-instruct\"\n",
+    "\n",
+    "# モデルの作成\n",
+    "llm = OpenAI(\n",
+    "    model_name=model_name,\n",
+    "    max_tokens=300,\n",
+    "    temperature=1.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -43,33 +60,20 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\n",
-      "1. モデルの型について、自然言語処理の目的やコンテキストに応じた適切なモデルを用いること。\n",
-      "\n",
-      "2. モデルのコードについて、モデル設計の効率性や汎用性を高めるために高度なアルゴリズムを用いること。\n",
-      "\n",
-      "3. データセットの種類や規模について、関連性を持つような蓄積されたデータでモデルを訓練して得られる正確な結果を得ようとすること。\n",
-      "\n",
-      "4. モデルトレーニングを行うときについて、損失関数や正則化項などの各パラメーターを実験的に\n"
+      "- 大規模なトレーニングデータを用意することで精度を向上させる\n",
+      "- ダイバーシティがある幅広い単語や表現を収集し、モデルに組み込むことでより自然な表現を生成する\n",
+      "- 単語や文章の出現頻度を考慮することで、コーパス内の単語間の結びつきを学習してより正確な予測を行う\n",
+      "- 文脈を考慮し、単語や文章の出現頻度だけではなく、前後にくる単語や文章も学習することで、より文脈に即した表現を生成する\n",
+      "- 潜在的な意味や文法的な規則などの知識を獲得するために、機械学習アルゴリズムを採用することでより高度な言語モデルを構築する\n"
      ]
     }
    ],
    "source": [
-    "from langchain import OpenAI\n",
+    "# 質問の設定\n",
+    "text = \"言語モデルを使う上でのポイントは？\"\n",
     "\n",
-    "model_name = \"text-davinci-003\"\n",
-    "\n",
-    "# プロンプトの設定\n",
-    "prompt = \"言語モデルを使う上でのポイントは？\"\n",
-    "\n",
-    "# モデルの作成\n",
-    "llm = OpenAI(\n",
-    "    model_name=model_name,\n",
-    "    max_tokens=300,\n",
-    "    temperature=1.2)\n",
-    "\n",
-    "# 言語モデルへリクエスト\n",
-    "response = llm(prompt)\n",
+    "# 言語モデルの呼出\n",
+    "response = llm.invoke(text)\n",
     "\n",
     "# 結果を表示\n",
     "print(response)"
@@ -84,60 +88,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "content='言語モデルを使う際のポイントは以下のとおりです。\\n\\n1. データの準備: 言語モデルを訓練するためには、大量のテキストデータが必要です。データの質と量を向上させるため、言語を対象とした専門的なデータセットを選択することが重要です。\\n\\n2. モデルの選択: 言語モデルには、RNN（再帰型ニューラルネットワーク）やTransformerなどさまざまなアーキテクチャがあります。対象のタスクや利用目的に合わせて、適切なモデルを選択しましょう。\\n\\n3. ハイパーパラメータの調整: 言語モデルの性能を最適化するためには、ハイパーパラメータの調整が必要です。学習率やバッチサイズなど、' additional_kwargs={} example=False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.schema import (\n",
-    "    AIMessage,\n",
-    "    HumanMessage,\n",
-    "    SystemMessage\n",
-    ")\n",
+    "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "model_name = \"gpt-3.5-turbo\"\n",
+    "model_name = \"gpt-3.5-turbo-1106\"\n",
     "\n",
-    "# メッセージの設定\n",
-    "message = \"言語モデルを使う上でのポイントは？\"\n",
-    "\n",
-    "# 言語モデルの作成\n",
-    "chat = ChatOpenAI(\n",
+    "# モデルの作成\n",
+    "chat_model = ChatOpenAI(\n",
     "    model_name=model_name,\n",
-    "    temperature=1.2,\n",
-    "    max_tokens=300)\n",
-    "\n",
-    "# 言語モデルへリクエスト\n",
-    "response = chat.predict_messages([\n",
-    "    HumanMessage(content=message)])\n",
-    "\n",
-    "# 結果を表示（AIMessage型で返る）\n",
-    "print(response)\n"
+    "    max_tokens=300,\n",
+    "    temperature=1.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "言語モデルを使う際のポイントは以下のとおりです。\n",
+      "content='1. データの品質向上: 言語モデルを構築するためには大規模なデータセットが必要です。そのため、データの収集からクリーニングまで、データの品質を向上させることが重要です。\\n\\n2. ハイパーパラメータの適切な設定: 言語モデルには複数のハイパーパラメータが存在し、それらの適切な設定が重要です。適切なハイパーパラメータを探索するためには、実験を重ねる必要があります。\\n\\n3. モデルの評価: 言語モデルの品質は正確な評価が必要です。適切な評価指標を選択し、実際の応用環境におけるモデルの性能を適切に評価することが重要です。\\n\\n4. パフォ'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.schema import HumanMessage\n",
+    "\n",
+    "# 質問の設定\n",
+    "text = \"言語モデルを使う上でのポイントは？\"\n",
+    "messages = [HumanMessage(content=text)]\n",
+    "\n",
+    "# 言語モデルの呼出\n",
+    "response = chat_model.invoke(messages)\n",
+    "\n",
+    "# 結果を表示（AIMessage型）\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. データの品質向上: 言語モデルを構築するためには大規模なデータセットが必要です。そのため、データの収集からクリーニングまで、データの品質を向上させることが重要です。\n",
       "\n",
-      "1. データの準備: 言語モデルを訓練するためには、大量のテキストデータが必要です。データの質と量を向上させるため、言語を対象とした専門的なデータセットを選択することが重要です。\n",
+      "2. ハイパーパラメータの適切な設定: 言語モデルには複数のハイパーパラメータが存在し、それらの適切な設定が重要です。適切なハイパーパラメータを探索するためには、実験を重ねる必要があります。\n",
       "\n",
-      "2. モデルの選択: 言語モデルには、RNN（再帰型ニューラルネットワーク）やTransformerなどさまざまなアーキテクチャがあります。対象のタスクや利用目的に合わせて、適切なモデルを選択しましょう。\n",
+      "3. モデルの評価: 言語モデルの品質は正確な評価が必要です。適切な評価指標を選択し、実際の応用環境におけるモデルの性能を適切に評価することが重要です。\n",
       "\n",
-      "3. ハイパーパラメータの調整: 言語モデルの性能を最適化するためには、ハイパーパラメータの調整が必要です。学習率やバッチサイズなど、\n"
+      "4. パフォ\n"
      ]
     }
    ],
@@ -155,58 +163,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "おおきに！おすすめの昼食は、たこ焼きやお好み焼き、串カツやうどんなんやで！けっこうボリュームがあって、美味しいもんばっかりやで！どれも大阪のソウルフードやから、ぜひ食べてみてや！\n"
+      "昼飯なら、たこ焼きとお好み焼きがあんまりおすすめやねん。あとはホルモン焼きや串カツもええやろ。関西って美味しいもんいっぱいあるから迷うくらいやで。\n"
      ]
     }
    ],
    "source": [
-    "# 役割を設定\n",
-    "role = \"あなたは関西人です。大阪弁を使います。\"\n",
-    "# メッセージの設定\n",
-    "message = \"おすすめの昼食は何ですか？\"\n",
+    "from langchain.schema import HumanMessage, SystemMessage\n",
     "\n",
-    "chat = ChatOpenAI(\n",
-    "    model_name=model_name,\n",
-    "    temperature=1.2,\n",
-    "    max_tokens=300)\n",
+    "# Systemメッセージ\n",
+    "system_message = \"あなたは関西人です。大阪弁を使います。\"\n",
+    "# ユーザーからの質問\n",
+    "user_message = \"おすすめの昼食は何ですか？\"\n",
     "\n",
-    "aiMessage = chat.predict_messages([\n",
-    "    SystemMessage(content=role),\n",
-    "    HumanMessage(content=message)])\n",
+    "# メッセージ配列の作成\n",
+    "messages = [\n",
+    "  SystemMessage(content=system_message),\n",
+    "  HumanMessage(content=user_message)]\n",
+    "\n",
+    "# 言語モデルの呼出\n",
+    "aiMessage = chat_model.invoke(messages)\n",
     "\n",
     "# 言語モデルからの回答を表示\n",
-    "print(aiMessage.content)"
+    "print(aiMessage.content.strip())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "せやけど、お好み焼きもたこ焼きもうどんも串カツもめっちゃ美味しいもんやで！でも、それ以外でもおすすめの昼食は、味噌カツや焼きそば、てっちり鍋やもんじゃ焼き、お寿司や刺し身なんかもおいしいで！大阪やから、たくさんのお店で様々なグルメが楽しめるで！ゆっくり食べて、関西を満喫してくれや！\n"
+      "他にもおすすめとしましては、うどんやそうめんもええやろう。関西では美味しい和食や洋食もたくさんあるから、食べたいものに合わせて選ぶとええと思うで。\n"
      ]
     }
    ],
    "source": [
     "# 会話を続ける\n",
-    "response = chat.predict_messages([\n",
-    "    SystemMessage(content=role),\n",
-    "    HumanMessage(content=message),\n",
-    "    aiMessage,\n",
-    "    HumanMessage(content=\"それ以外のおすすめは？\")])\n",
+    "response = chat_model.invoke([\n",
+    "  *messages,\n",
+    "  aiMessage,\n",
+    "  HumanMessage(content=\"それ以外のおすすめは？\")])\n",
     "\n",
-    "print(response.content)"
+    "# 言語モデルからの回答を表示\n",
+    "print(response.content.strip())"
    ]
   },
   {
@@ -227,18 +236,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'langchain.prompts.prompt.PromptTemplate'> \n",
+      "<class 'langchain_core.prompts.prompt.PromptTemplate'> \n",
       " ----------------------------------------\n",
-      "input_variables=['subject'] output_parser=None partial_variables={} template='{subject}を勉強する方法をステップ・バイ・ステップで教えてください' template_format='f-string' validate_template=True \n",
+      "input_variables=['subject'] template='{subject}を勉強する方法をステップ・バイ・ステップで教えてください' \n",
       " ----------------------------------------\n",
       "英語を勉強する方法をステップ・バイ・ステップで教えてください\n"
      ]
     }
    ],
    "source": [
-    "from langchain import PromptTemplate\n",
+    "from langchain.prompts import PromptTemplate\n",
     "\n",
-    "model_name = \"text-davinci-003\"\n",
+    "model_name = \"gpt-3.5-turbo-instruct\"\n",
     "\n",
     "# プロンプトテンプレートの作成\n",
     "template = \"{subject}を勉強する方法をステップ・バイ・ステップで教えてください\"\n",
@@ -254,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -263,19 +272,19 @@
      "text": [
       "\n",
       "\n",
-      "1. ゴールとそこに到達するために必要な士気とリスクをおさえる。\n",
+      "ステップ1: 目標を設定する\n",
+      "まず最初に、英語を勉強する理由や目的を明確にしましょう。自分の英語のレベルを知り、どのように成長したいか、またはどの程度のレベルを目指すかを決めます。目標を明確にすることでモチベーションを持続させることができます。\n",
       "\n",
-      "2. 英語の能力を客観的に評価するために、検定や短期学習に取り組むなどのさまざまな試みを試みる。\n",
+      "ステップ2: 日常的な学習環境を作る\n",
+      "英語を勉強するための環境を整えましょう。英語の本やオーディオブック、映画やテレビ番組などを使用して、身近な環境に英語を取り入れることが重要です。また、英語を話す機会を増やすために、英語クラスや英会話グループなどに参加することも良いでしょう。\n",
       "\n",
-      "3. 聞くための日常の生活での英語を楽しみ始める。たとえば英語のニュースの刊行物、書籍、あるいはその他の音楽などを聞いてみる。\n",
-      "\n",
-      "4. 音声の発音練習をすることを手始めに、しゃべる習慣を身に付けるために英会話クラスなど\n"
+      "ステップ3:\n"
      ]
     }
    ],
    "source": [
-    "# 言語モデルへリクエスト\n",
-    "response = llm(prompt_string)\n",
+    "# 言語モデルの呼出\n",
+    "response = llm.invoke(prompt_string)\n",
     "\n",
     "# 結果を表示\n",
     "print(response)"
@@ -290,69 +299,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[SystemMessage(content='あなたは英語から日本語に翻訳する優秀な翻訳家です。', additional_kwargs={}), HumanMessage(content='I love programming.', additional_kwargs={}, example=False)]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[SystemMessage(content='あなたは英語から日本語に翻訳する優秀な翻訳家です。'),\n",
+       " HumanMessage(content='I love programming.')]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from langchain.prompts import (\n",
-    "    ChatPromptTemplate,\n",
-    "    PromptTemplate,\n",
-    "    SystemMessagePromptTemplate,\n",
-    "    AIMessagePromptTemplate,\n",
-    "    HumanMessagePromptTemplate,\n",
-    ")\n",
+    "from langchain.prompts.chat import ChatPromptTemplate\n",
     "\n",
-    "# システムメッセージ用プロンプトテンプレート\n",
-    "prompt=PromptTemplate(\n",
-    "    template=\"あなたは{input_language}から{output_language}に翻訳する優秀な翻訳家です。\",\n",
-    "    input_variables=[\"input_language\", \"output_language\"],\n",
-    ")\n",
-    "system_message_prompt = SystemMessagePromptTemplate(prompt=prompt)\n",
+    "template = \"あなたは{input_language}から{output_language}に翻訳する優秀な翻訳家です。\"\n",
+    "human_template = \"{text}\"\n",
     "\n",
-    "# ユーザーメッセージ用プロンプトテンプレート\n",
-    "human_message_prompt = HumanMessagePromptTemplate.from_template(\"{text}\")\n",
+    "chat_prompt = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", template),\n",
+    "    (\"human\", human_template),\n",
+    "])\n",
     "\n",
-    "# Chatプロンプトの作成\n",
-    "chat_prompt = ChatPromptTemplate.from_messages(\n",
-    "    [system_message_prompt, human_message_prompt])\n",
+    "messages = chat_prompt.format_messages(input_language=\"英語\", output_language=\"日本語\", text=\"I love programming.\")\n",
     "\n",
-    "# チャットメッセージリストの生成\n",
-    "chat_messages = chat_prompt.format_prompt(\n",
-    "    input_language=\"英語\",\n",
-    "    output_language=\"日本語\",\n",
-    "    text=\"I love programming.\").to_messages()\n",
-    "\n",
-    "# メッセージリストの表示\n",
-    "print(chat_messages)"
+    "messages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='私はプログラミングが大好きです。' additional_kwargs={} example=False\n"
+      "content='プログラミングが大好きです。'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 言語モデルの呼出\n",
+    "response = chat_model.invoke(messages)\n",
+    "\n",
+    "# 結果を表示（AIMessage型）\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Output Parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.output_parsers import CommaSeparatedListOutputParser\n",
+    "\n",
+    "# Output Parserの作成\n",
+    "output_parser = CommaSeparatedListOutputParser()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "afoot,adult,amaze,appear,allow,t(this!),apple,arch,attack,all\n"
      ]
     }
    ],
    "source": [
     "# 言語モデルへリクエスト\n",
-    "response = chat.predict_messages(chat_messages)\n",
+    "response = llm.invoke(\"aで始まる英単語を10個、カンマ区切りで出力してください\")\n",
     "\n",
-    "# 結果を表示（AIMessage型で返る）\n",
+    "# 結果を表示\n",
     "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['afoot,adult,amaze,appear,allow,t(this!),apple,arch,attack,all']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 変換\n",
+    "output_parser.parse(response)"
    ]
   },
   {
@@ -364,12 +423,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.prompts import PromptTemplate\n",
-    "from langchain.prompts import FewShotPromptTemplate\n",
+    "from langchain_core.prompts.few_shot import FewShotPromptTemplate\n",
+    "from langchain_core.prompts.prompt import PromptTemplate\n",
     "from langchain.prompts.example_selector import LengthBasedExampleSelector\n",
     "\n",
     "# 抽出元のリスト\n",
@@ -406,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -450,90 +509,11 @@
    ],
    "source": [
     "# 言語モデルへリクエスト\n",
-    "response = llm(dynamic_prompt_string)\n",
+    "response = llm.invoke(dynamic_prompt_string)\n",
     "\n",
     "# 結果を表示\n",
     "print(response)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Output Parser"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.output_parsers import CommaSeparatedListOutputParser\n",
-    "\n",
-    "# Output Parserの作成\n",
-    "output_parser = CommaSeparatedListOutputParser()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "arena, archery, arrested, artery, appearance, apron, archway, arrangement, ambassador, archetype\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 言語モデルへリクエスト\n",
-    "response = llm(\"aで始まる英単語を10個、カンマ区切りで出力してください\")\n",
-    "\n",
-    "# 結果を表示\n",
-    "print(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['arena',\n",
-       " 'archery',\n",
-       " 'arrested',\n",
-       " 'artery',\n",
-       " 'appearance',\n",
-       " 'apron',\n",
-       " 'archway',\n",
-       " 'arrangement',\n",
-       " 'ambassador',\n",
-       " 'archetype']"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 変換\n",
-    "output_parser.parse(response)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -552,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
