--- a/show_models.ipynb
+++ b/show_models.ipynb
@@ -2,24 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 必要なモジュールをインポート\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "import openai\n",
+    "from openai import OpenAI\n",
     "\n",
-    "# 環境変数の読み込み\n",
+    "# 環境変数の取得\n",
     "load_dotenv()\n",
-    "openai.organization = os.environ['ORGANIZATION']\n",
-    "openai.api_key = os.environ['API_KEY']"
+    "# OpenAI APIクライアントを生成\n",
+    "client = OpenAI(api_key=os.environ['API_KEY'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,31 +28,43 @@
        "['gpt-3.5-turbo',\n",
        " 'gpt-3.5-turbo-0301',\n",
        " 'gpt-3.5-turbo-0613',\n",
+       " 'gpt-3.5-turbo-1106',\n",
        " 'gpt-3.5-turbo-16k',\n",
        " 'gpt-3.5-turbo-16k-0613',\n",
+       " 'gpt-3.5-turbo-instruct',\n",
+       " 'gpt-3.5-turbo-instruct-0914',\n",
        " 'gpt-4',\n",
        " 'gpt-4-0314',\n",
        " 'gpt-4-0613',\n",
+       " 'gpt-4-1106-preview',\n",
+       " 'gpt-4-vision-preview',\n",
        " 'text-davinci-001',\n",
        " 'text-davinci-002',\n",
        " 'text-davinci-003',\n",
        " 'text-davinci-edit-001']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# モデルの一覧を取得\n",
-    "models = openai.Model.list()\n",
+    "models = client.models.list()\n",
     "\n",
     "# GPT系のモデルのidを取得、ソートして表示\n",
-    "model_list = [m[\"id\"] for m in models[\"data\"] if \"gpt\" in m[\"id\"] or \"text-davinci\" in m[\"id\"]]\n",
+    "model_list = [m.id for m in models if \"gpt\" in m.id or \"text-davinci\" in m.id]\n",
     "model_list.sort()\n",
-    "model_list"
+    "model_list\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -71,9 +83,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  },
-  "orig_nbformat": 4
+   "version": "3.11.7"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
